@@ -1801,6 +1801,7 @@ handle_qxfer_threads_worker (thread_info *thread, struct buffer *buffer)
   int core = the_target->core_of_thread (ptid);
   char core_s[21];
   const char *name = the_target->thread_name (ptid);
+  std::string id_str = the_target->thread_id_str (thread);
   int handle_len;
   gdb_byte *handle;
   bool handle_status = the_target->thread_handle (ptid, &handle, &handle_len);
@@ -1823,6 +1824,9 @@ handle_qxfer_threads_worker (thread_info *thread, struct buffer *buffer)
 
   if (name != NULL)
     buffer_xml_printf (buffer, " name=\"%s\"", name);
+
+  if (!id_str.empty ())
+    buffer_xml_printf (buffer, " id_str=\"%s\"", id_str.c_str ());
 
   if (handle_status)
     {
